edits on div names

--- a/trash/oilgas_map.html
+++ b/trash/oilgas_map.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block body %}
-<div class="container-fluid" id="oilgas_maps">
+<div class="container-fluid" id="oilgas_map">
     <div class="row">
         <div class="col-md-12">
             <div class="mapog" id="map_oilgas">
